--- a/core/myapp/templates/main.html
+++ b/core/myapp/templates/main.html
@@ -19,12 +19,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Подключение Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Подключение Font Awesome через CDN -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Добавляем ссылку на Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Подключение Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Конфигурация MathJax -->
     <script type="text/javascript">
@@ -52,6 +46,13 @@
             src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
     </script>
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+
+        html, body {
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+    </style>
 
 </head>
 
@@ -82,9 +83,9 @@
                         <small class="text-muted">Дата: {{ blog.created_at|date:"d.m.Y H:i" }}</small>
                     </div>
 
-                    <h5 class="card-title">{{ blog.title }}</h5>
+                    <h5 class="card-title" style="font-weight:bold; color:#219ebc   ;">{{ blog.title }}</h5>
                     <div class="card-text">
-                        <p class="text-muted mb-3" style="white-space: pre-wrap;">{{ blog.content|safe }}</p>
+                        <p class="text-muted mb-3" style="white-space: pre-wrap; font-size:0.9rem;">{{ blog.content|safe }}</p>
                         {% if user.is_staff %}
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="{% url 'edit_existing_blog' blog.id %}" class="btn btn-primary btn-sm"> <i class="fas fa-edit"></i>Редактировать</a>
