--- a/core/myapp/templates/quiz_templates/quiz_realtime_log.html
+++ b/core/myapp/templates/quiz_templates/quiz_realtime_log.html
@@ -20,6 +20,14 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+
+        html, body {
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+    </style>
+
 </head>
 <body>
 
