--- a/core/myapp/templates/quiz_templates/quizzes.html
+++ b/core/myapp/templates/quiz_templates/quizzes.html
@@ -21,6 +21,14 @@
     <!-- Подключение Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+
+        html, body {
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
+    </style>
+
 </head>
 <body>
 <div class="container mt-4">
